--- a/style.css
+++ b/style.css
@@ -268,3 +268,87 @@ body.dark #moon{
     bottom: 0;
     right: 100px;
 }
+
+.images img{
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    transition: all 1s;
+}
+
+.images:hover .bg{
+    bottom: 40px;
+}
+
+.images:hover .girl{
+    left: 60%;
+}
+
+@media(max-width:1084px){
+    .nav_menu.responsive{
+        position: fixed;
+        left: 0;
+    }
+    .nav_menu{
+        position: fixed;
+        left: -100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 500px;
+        width: 40%;
+        border-radius: 0 20px 0 0;
+        backdrop-filter: blur(10px);
+        box-shadow: 3px 0px 10px rgba(0,0,0,0.2);
+        transition: all .2s ease;
+        background-color: rgba(211,211,211,0.2);
+        z-index: 100;
+    }
+    .link_list{
+        flex-direction: column;
+    }
+    .nav_menu_btn{
+        display: flex;
+        align-items: center;
+    }
+    .nav_menu_btn .fa-bars{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 45px;
+        height: 45px;
+        background: var(--second-color);
+        color: var(--bg-color);
+        border-radius: 50%;
+        cursor: pointer;
+    }
+    .close-menu{
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 30px;
+    }
+    .images{
+        width: 45%;
+        height: 80%;
+        position: absolute;
+        bottom: 0;
+        right: 100px;
+    }
+    .images .bg{
+        width: 0;
+        height: 0;
+    }
+    .images:hover .girl{
+        left: 90%;
+    }
+    .images img{
+        height: 100%;
+        position: absolute;
+        left: 70%;
+        bottom: 0;
+        transition: all 1s;
+    }
+}
